Use static valueOf  instead of new
And don't create new instance for no purpose.